clusters/dev/flux-web-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: flux-system
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik-system
      sectionName: websecure
  hostnames:
    - "flux-web.infra.dev.skiyl9x.pp.ua"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-web
          port: 9080
